@@ -35,13 +35,18 @@ https://github.com/JPNaude/Qtilities/issues/milestones
     [+] Added FileUtils::toUnixPath().
     [+] Added FileUtils::writeTextFile().
     [+] Added FileUtils::readTextFile().
+    [+] QtilitiesProcess:startProcess() got a new timeout parameter which allows defining a timeout for the process.
+    [+] QtilitiesProcess now has the ability to store all buffered messages from a process for you in something
+        called a last run buffer. See the new QtilitiesProcess::lastRunBuffer() and related functions for more information.
 
     [#] QtilitiesProcess::logProgressOutput() and QtilitiesProcess::logProgressError() are now protected slots, allowing
         subclasses to reimplement its functionality. Also, bunch of improvements internally in QtilitiesProcess and
         detailed documentation how messages from the backend process are buffered was added.
+    [#] Changed debug messages in Observer's destructor to trace messages.
 
     [*] Fixed bug in Observer::handle_deletedSubject() where application can sometimes
         crash with "Detected QWeakPointer creation in a QObject being deleted".
+    [*] Fixed possible crash in TreeIterator::last() when the TreeIterator was constructed with a null node.
 
     ============================
     QtilitiesCoreGui:
